--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -1,13 +1,13 @@
 version: 2.1
 
 description: >
-  Sample orb description
+  This is a sample orb that demonstrates how to use the docker layer caching feature.
 # What will your orb allow users to accomplish?
 # Descriptions should be short, simple, and informative.
 
 # This information will be displayed in the orb registry and is not mandatory.
 display:
-  home_url: "https://www.example.com/docs"
+  home_url: "https://github.com/vy-labs/circleci-docker-cache"
   source_url: "https://github.com/vy-labs/circleci-docker-cache"
 
 # If your orb requires other orbs, you can import them like this. Otherwise remove the "orbs" stanza.
