--- a/src/commands/docker-cache-command.yml
+++ b/src/commands/docker-cache-command.yml
@@ -11,6 +11,9 @@ parameters:
     description: "Path to Dockerfile"
 steps:
   - run:
+      name: install skopeo
+      command: <<include(scripts/install-skopeo.sh)>>
+  - run:
       environment:
         LANGUAGE: <<parameters.LANGUAGE>>
         DOCKERFILE: <<parameters.DOCKERFILE_PATH>>
