--- a/src/commands/restore-docker-cache.yml
+++ b/src/commands/restore-docker-cache.yml
@@ -1,10 +1,17 @@
 description: >
   This command restores docker cache
 parameters:
-  key:
+  key_docker:
     type: string
     default: docker-layer-caching-key-{{ checksum "/tmp/docker-layer-caching-key.txt" }}
     description: "Cache key to restore"
 steps:
+  - run:
+      name: get checksum key
+      command: checksum_key=$(cat /tmp/checksum_key)
+      environment:
+        CHECKSUM_KEY: $checksum_key
   - restore_cache:
-      key: <<parameters.key>>
+      keys:
+        - <<parameters.key_docker>>-{{ .Environment.CHECKSUM_KEY }}
+        - <<parameters.key_docker>>
