--- a/src/commands/store-docker-cache.yml
+++ b/src/commands/store-docker-cache.yml
@@ -1,7 +1,7 @@
 description: >
   This command generates docker cache key
 parameters:
-  key:
+  key_docker:
     type: string
     default: docker-layer-caching-key-{{ checksum "/tmp/docker-layer-caching-key.txt" }}
     description: "Cache key"
@@ -10,7 +10,16 @@ parameters:
     default: /tmp/docker-layer-caching-key.txt
     description: "Cache paths"
 steps:
+  - run:
+      name: get checksum key
+      command: checksum_key=$(cat /tmp/checksum_key)
+      environment:
+        CHECKSUM_KEY: $checksum_key
   - save_cache:
-      key: <<parameters.key>>
+      key: <<parameters.key_docker>>
+      paths:
+        - <<parameters.paths>>
+  - save_cache:
+      key: <<parameters.key_docker>>-{{ .Environment.CHECKSUM_KEY }}
       paths:
         - <<parameters.paths>>
