--- a/src/commands/restore-docker-cache.yml
+++ b/src/commands/restore-docker-cache.yml
@@ -5,13 +5,12 @@ parameters:
     type: string
     default: docker-layer-caching-key-{{ checksum "/tmp/docker-layer-caching-key.txt" }}
     description: "Cache key to restore"
+  lock_file:
+    type: string
+    default: "poetry.lock"
+    description: "Path to lock file"
 steps:
-  - run:
-      name: get checksum key
-      command: checksum_key=$(cat /tmp/checksum_key)
-      environment:
-        CHECKSUM_KEY: $checksum_key
   - restore_cache:
       keys:
-        - <<parameters.key_docker>>-{{ .Environment.CHECKSUM_KEY }}
+        - <<parameters.key_docker>>-{{ checksum "<<parameters.lock_file>>" }}
         - <<parameters.key_docker>>
