--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,8 @@ workflows:
           vcs-type: << pipeline.project.type >>
           requires:
             [orb-tools/lint, orb-tools/review, orb-tools/pack, shellcheck/check]
+          pub-type: production
+          enable-pr-comment: false
           # Use a context to hold your publishing token.
           context: orb-publishing
           filters: *filters
