--- a/src/commands/s3_restore.yml
+++ b/src/commands/s3_restore.yml
@@ -1,17 +1,21 @@
 description: >
   This command finds the latest s3 cache and restores it to specified path during store
 parameters:
+  aws_region:
+    type: string
+    description: "AWS region"
+    default: "us-east-1"
   bucket_name:
     type: string
-    default: "859747976171-docker-cache"
     description: "Bucket name"
-  key:
+  source:
     type: string
     description: "Cache key to restore"
 steps:
   - run:
       environment:
+        AWS_REGION: <<parameters.aws_region>>
         BUCKET_NAME: <<parameters.bucket_name>>
-        KEY: <<parameters.key>>
+        SOURCE: <<parameters.source>>
       name: Restore s3 cache
       command: <<include(scripts/s3_cache/restore.sh)>>
