--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,9 +29,19 @@ workflows:
           # Use a context to hold your publishing token.
           context: orb-publishing
           filters: *filters
+          when:
+            # Only publish if the pipeline is triggered by a commit to master.
+            condition:
+              and:
+                - << pipeline.git.branch >> == "master"
       # Triggers the next workflow in the Orb Development Kit.
       - orb-tools/continue:
           pipeline-number: << pipeline.number >>
           vcs-type: << pipeline.project.type >>
           requires: [orb-tools/publish]
           filters: *filters
+          when:
+            # Only publish if the pipeline is triggered by a commit to master.
+            condition:
+              and:
+                - << pipeline.git.branch >> == "master"
