--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ workflows:
           context: orb-publishing
           filters:
             branches:
-              ignore: master
+              only: master
             tags:
               only: /^v[0-9]+\.[0-9]+\.[0-9]+$/
       # Triggers the next workflow in the Orb Development Kit.
